<resources>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="ga_container_id">GTM-N95XSV</string>
    <string name="ga_custom_key_sample_rate">spb-sampleRate</string>
    <string name="additional_collate_rule" />
    <string name="phone_number_pattern">(\\+[0-9]+[\\- \\.]*)?(\\([0-9]+\\)[\\- \\.]*)?([0-9][0-9\\- \\.]+[0-9])</string>
    <string name="brand" />
    <string name="contacts">/System/PIM/</string>
    <string name="disabled_im_services" />
    <string name="account_types" />
    <string name="disabled_contact_fields" />
    <string name="default_account_type" />
    <string name="local_account_type">com.sonyericsson.localcontacts</string>
    <string name="local_account_name">Phone contacts</string>
    <string name="collapse_call_log_matching_method" />
    <string name="dialpad_label_2_txt">ABC</string>
    <string name="dialpad_label_3_txt">DEF</string>
    <string name="dialpad_label_4_txt">GHI</string>
    <string name="dialpad_label_5_txt">JKL</string>
    <string name="dialpad_label_6_txt">MNO</string>
    <string name="dialpad_label_7_txt">PQRS</string>
    <string name="dialpad_label_8_txt">TUV</string>
    <string name="dialpad_label_9_txt">WXYZ</string>
    <string name="dialpad_label_0_txt">+</string>
    <string name="dialpad_search_label_1_txt" />
    <string name="dialpad_search_label_2_txt" />
    <string name="dialpad_search_label_3_txt" />
    <string name="dialpad_search_label_4_txt" />
    <string name="dialpad_search_label_5_txt" />
    <string name="dialpad_search_label_6_txt" />
    <string name="dialpad_search_label_7_txt" />
    <string name="dialpad_search_label_8_txt" />
    <string name="dialpad_search_label_9_txt" />
    <string name="dialpad_search_label_0_txt" />
    <string name="dialpad_search_label_star_txt" />
    <string name="dialpad_search_label_pound_txt" />
    <string name="fileprovider_authority">com.sonyericsson.android.socialphonebook.fileprovider</string>
    <string name="config_import_vcard_type">default</string>
    <string name="config_export_vcard_type">default</string>
    <string name="config_export_file_prefix">PIM</string>
    <string name="config_export_file_suffix" />
    <string name="config_export_file_extension">vcf</string>
    <string name="config_export_extensions_to_consider" />
    <string name="help_url_people_add" />
    <string name="help_url_people_edit" />
    <string name="full_name">Name</string>
    <string name="sms">Text message</string>
    <string name="postal_address">Address</string>
    <string name="from_account_format">%1$s</string>
    <string name="sim_1_title">SIM1</string>
    <string name="sim_2_title">SIM2</string>
    <string name="spb_strings_contact_list_ice_item_name">ICE - In Case of Emergency</string>
    <string name="ice_view_contact_list_contact_suffix">ICE</string>
    <string name="spb_strings_menu_send_feedback_txt">Send feedback</string>
    <string name="tab_font_family">sans-serif</string>
    <string name="conference_call_apply_site">http://cs.kddi.com/smt/option</string>
    <string name="help_url_call_log">help://com.sonymobile.helpapp/support?app=com.sonyericsson.android.socialphonebook&amp;category=CallLog</string>
    <string name="help_url_dialer">help://com.sonymobile.helpapp/support?app=com.sonyericsson.android.socialphonebook&amp;category=Dialer</string>
    <string name="help_url_contact_list">help://com.sonymobile.helpapp/support?app=com.sonyericsson.android.socialphonebook&amp;category=ContactsList</string>
    <string name="help_url_contact_details">help://com.sonymobile.helpapp/support?app=com.sonyericsson.android.socialphonebook&amp;category=ContactDetails</string>
    <string name="verizon_contact_type_subtitle_when_cloud_app_active">Verizon Cloud</string>
    <string name="contactsListPickSearch">Contacts</string>
    <string name="launcherDialer">Phone</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Select contact</string>
    <string name="callShortcutActivityTitle">Select contact</string>
    <string name="messageShortcutActivityTitle">Select contact</string>
    <string name="starredList">Favorites</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favorites</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="quickContactDescription">Quick contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_search">Search</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_viewContact">View contact</string>
    <string name="menu_callNumber">Call %s</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="deleteConfirmation_title">Delete</string>
    <string name="readOnlyContactWarning">You cannot delete contacts from read-only accounts, but you can hide them in your contact lists.</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will not be deleted.</string>
    <string name="menu_sendTextMessage">Send text message</string>
    <string name="recentCalls_addToContact">Add to Contacts</string>
    <string name="inifinteview_menu_delete_contact_txt">Delete contact</string>
    <string name="menu_editContact">Edit contact</string>
    <string name="menu_share">Share</string>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="menu_create_contact_shortcut">Place on Home screen</string>
    <string name="spb_strings_contacts_list_menu_mark_mode_txt">Mark several</string>
    <string name="spb_strings_contacts_import_txt">Import contacts</string>
    <string name="spb_strings_contacts_list_menu_start_verizon_cloud_txt">Backup to Cloud</string>
    <string name="spb_strings_contacts_list_menu_export_contacts_txt">Export contacts</string>
    <string name="spb_strings_contacts_list_filter_txt">Filter</string>
    <string name="spb_strings_gen_link_contact_txt">Link contact</string>
    <string name="spb_strings_gen_settings_txt">Settings</string>
    <string name="spb_strings_disable_smart_search_txt">Disable smart search</string>
    <string name="spb_strings_enable_smart_search_txt">Enable smart search</string>
    <string name="gal_addToContact">Add to Contacts</string>
    <string name="speed_dial_setting_title_bar_txt">Speed dial settings</string>
    <string name="spb_strings_menu_add_prefix">Add prefix</string>
    <string name="spb_strings_menu_international_call">International call</string>
    <string name="spb_strings_link_contact_suggestion_check_contacts_option_txt">Find link candidates</string>
    <string name="spb_contacts_list_menu_add_account_txt">Add account</string>
    <string name="ice_view_medical_information_allergies">Allergies</string>
    <string name="ice_view_medical_information_medication">Medication</string>
    <string name="ice_view_medical_information_additional_information">Additional information</string>
    <string name="ice_view_medical_information_donor">Donor</string>
    <string name="lte_menu_item_open_call_settings">Call settings</string>
    <string name="lte_menu_item_refresh_call_status">Refresh call status</string>
    <string name="lte_menu_item_make_video_call">Make video call</string>
    <string name="conference_call_voice_party_dialog_message">"To use Voice Party, you need to join the service plan. If you have joined the service plan, tap Continue.
If you have not joined the service plan, tap Go to apply site."</string>
    <string name="conference_call_continue_button">CONTINUE</string>
    <string name="conference_call_goto_button">GO TO APPLY SITE</string>
    <string name="conference_call_dialog_show_checkbox">"Don't show again"</string>
    <string name="spb_strings_menu_item_help">Help</string>
</resources>