<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/dialog_message" android:paddingTop="@dimen/conference_call_dialog_message_padding_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/conference_call_voice_party_dialog_message" android:paddingStart="@dimen/conference_call_dialog_message_padding_start_end" android:paddingEnd="@dimen/conference_call_dialog_message_padding_start_end" style="@android:style/TextAppearance.DeviceDefault.Widget.TextView.PopupMenu" />
    <CheckBox android:id="@id/dialog_show_again" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/conference_call_dialog_check_margin_top" android:layout_marginBottom="@dimen/conference_call_dialog_check_margin_bottom" android:text="@string/conference_call_dialog_show_checkbox" android:layout_marginStart="@dimen/conference_call_dialog_check_margin_start_end" android:layout_marginEnd="@dimen/conference_call_dialog_check_margin_start_end" />
    <Button android:layout_gravity="end" android:id="@id/dialog_continue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/conference_call_continue_button" android:layout_marginEnd="@dimen/conference_call_dialog_button_margin_end" style="@style/Dialog.DeviceDefault.Button.Borderless" />
    <Button android:layout_gravity="end" android:id="@id/dialog_goto" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/conference_call_goto_button" android:layout_marginEnd="@dimen/conference_call_dialog_button_margin_end" style="@style/Dialog.DeviceDefault.Button.Borderless" />
    <Button android:layout_gravity="end" android:id="@id/dialog_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/conference_call_dialog_button_margin_bottom" android:text="@android:string/cancel" android:layout_marginEnd="@dimen/conference_call_dialog_button_margin_end" style="@style/Dialog.DeviceDefault.Button.Borderless" />
</LinearLayout>