<?xml version="1.0" encoding="utf-8"?>
<com.sonyericsson.android.socialphonebook.ice.IceMedicalInformationContainer android:orientation="vertical" android:id="@id/ice_medical_info_container" android:background="?android:selectableItemBackground" android:focusable="true" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/empty_medical_information" layout="@layout/two_text_view" />
    <LinearLayout android:orientation="vertical" android:id="@id/allergies_view" android:paddingTop="@dimen/ice_list_padding_top" android:paddingBottom="@dimen/ice_list_padding_bottom" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/ice_list_minimum_height" android:paddingStart="@dimen/ice_list_padding_start_end" android:paddingEnd="@dimen/ice_list_padding_start_end">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:id="@id/allergies_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ice_view_medical_information_allergies" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/allergies_info" android:paddingTop="@dimen/ice_list_medical_info_item_padding_top" android:paddingBottom="@dimen/ice_list_medical_info_item_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/medication_view" android:paddingTop="@dimen/ice_list_padding_top" android:paddingBottom="@dimen/ice_list_padding_bottom" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/ice_list_minimum_height" android:paddingStart="@dimen/ice_list_padding_start_end" android:paddingEnd="@dimen/ice_list_padding_start_end">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:id="@id/medication_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ice_view_medical_information_medication" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/medication_info" android:paddingTop="@dimen/ice_list_medical_info_item_padding_top" android:paddingBottom="@dimen/ice_list_medical_info_item_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/donor_view" android:paddingTop="@dimen/ice_list_padding_top" android:paddingBottom="@dimen/ice_list_padding_bottom" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/ice_list_minimum_height" android:paddingStart="@dimen/ice_list_padding_start_end" android:paddingEnd="@dimen/ice_list_padding_start_end">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:id="@id/donor_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ice_view_medical_information_donor" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/donor_info" android:paddingTop="@dimen/ice_list_medical_info_item_padding_top" android:paddingBottom="@dimen/ice_list_medical_info_item_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/additional_info_view" android:paddingTop="@dimen/ice_list_padding_top" android:paddingBottom="@dimen/ice_list_padding_bottom" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/ice_list_minimum_height" android:paddingStart="@dimen/ice_list_padding_start_end" android:paddingEnd="@dimen/ice_list_padding_start_end">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:id="@id/additional_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ice_view_medical_information_additional_information" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/additional_info" android:paddingTop="@dimen/ice_list_medical_info_item_padding_top" android:paddingBottom="@dimen/ice_list_medical_info_item_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
</com.sonyericsson.android.socialphonebook.ice.IceMedicalInformationContainer>